--- a/KZ.html
+++ b/KZ.html
@@ -784,7 +784,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="img/man.png" alt="" class="advant-man">
+                <img src="img/man-kz.png" alt="" class="advant-man">
             </div>
         </section>
         <section class="application">
